--- a/css/mkis_m.css
+++ b/css/mkis_m.css
@@ -1,10 +1,37 @@
 @charset "utf-8";
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
 
+@-webkit-keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
 /* Reset */
-body {max-width:1024px;min-width:320px;margin:40px auto 0 !important;}
+body {max-width:1024px;min-width:320px;margin:0px auto 0 !important;}
 
 /* 디비필드 이동버튼 */
-.btn_go_dbfield {width:100%;background:#ff0072;text-decoration:none; display:block;position:fixed; left:0; top:0px;text-align:center;z-index:9999999;border-radius:0;}
+.btn_go_dbfield {width:100%;
+	background: linear-gradient(30.37deg, #ff0072 15%, rgb(3, 97, 219) 50.17%, rgb(243, 29, 75) 90.23%) repeat;
+	animation: gradient 5s ease infinite;
+	-webkit-animation: gradient 5s ease infinite;
+	background-size: 400% 100%;
+	text-decoration:none; display:block;position:fixed; left:0; bottom:0;text-align:center;z-index:9999999;border-radius:0;padding:10px 0;}
 .btn_go_dbfield span {line-height:40px;color:white;font-weight:bold;font-size:1.2em;}
 
 /* 디비필드 */
@@ -69,3 +96,25 @@ button {box-sizing: border-box; cursor: pointer;}
 }
 .bx-prev {background-image: url(/ext/img/icon/arr-prev.png) !important; left: 2.5%;}
 .bx-next {background-image: url(/ext/img/icon/arr-next.png) !important; right: 2.5%;}
+
+.float{
+	position: fixed;
+    width: 99%;
+    height: 60px;
+    bottom: 5px;
+    left: 0.5%;
+	background: linear-gradient(30.37deg, #ff0072  10%, #fff 30.17%, #555 73.23%) repeat;
+	vertical-align: middle;
+	animation: gradient 5s ease infinite;
+	-webkit-animation: gradient 5s ease infinite;
+	color: #FFF;
+	border-radius: 3px;
+	border: 1px solid white;
+	text-align: center;
+	background-size: 350% 100%;
+    font-size: 19px;
+    cursor: pointer;
+    /* box-shadow: 2px 2px 3px #999; */
+	z-index:999;
+	vertical-align: middle;
+}
